<resources>
    <string name="app_name">NoDool</string>
    <string name="notes_heading">My Notes</string>
    <string name="search_notes">Search Notes</string>
    <string name="note_title">Note Title</string>
    <string name="note_subtitle">Note Subtitle</string>
    <string name="type_note_here">Type Note Here</string>
    <string name="miscellaneous">Miscellaneous</string>
    <string name="add_image">Add Image</string>
    <string name="add_url">Add Url</string>
    <string name="enter_url">Enter Url</string>
    <string name="add">ADD</string>
    <string name="cancel_dialogue">CANCEL</string>
    <string name="delete_note">Delete Note</string>
    <string name="are_you_sure_you_want_to_delete_this_note">Are you sure you want to delete this note</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="text_signup_message">Create your account</string>
    <string name="hint_email">Email</string>
    <string name="hint_username">Name</string>
    <string name="hint_phone">Phone Number</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="button_sign_up">Register</string>
    <string name="text_signup_social_media">or Sign up using social media</string>
    <string name="text_signup_terms">Terms and conditions applied</string>
    <string name="text_signin_message">Sign in to you account</string>
    <string name="button_sign_in">Sign In</string>
    <string name="text_signin_signup">or Sign Up</string>
    <string name="or_sign_up">Sign Up</string>
    <string name="exit">Exit</string>
</resources>